--- a/notebooks/rdkit_smiles_3d.ipynb
+++ b/notebooks/rdkit_smiles_3d.ipynb
@@ -13,13 +13,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b82d4dc35d674d9c8d6e7f2fd3f733a5",
+       "model_id": "5988cc407f3e40e3b26de2821c4adb3c",
        "version_major": 2,
        "version_minor": 0
       },
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 11,
    "metadata": {
     "scrolled": false
    },
@@ -54,7 +54,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d47efe5ac6f146aebf115feb30f1fe86",
+       "model_id": "85ecb0f0a4ca42b7a0009ba93278fb7d",
        "version_major": 2,
        "version_minor": 0
       },
@@ -68,7 +68,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "fdcaf88e30074fd9a8d010495bae29e1",
+       "model_id": "f304a4d903ec44a78448b761a29353b4",
        "version_major": 2,
        "version_minor": 0
       },
@@ -111,9 +111,9 @@
     "        bgen = VBox([self.text, self._out])\n",
     "        bfull = VBox([btn, btn_fs])\n",
     "        footer = self.footer = HBox([bgen, bfull])\n",
-    "        self.left_sidebar = lbar = Image()\n",
-    "        self.left_sidebar.layout.align_self = 'center'\n",
-    "        lbar.layout.display = 'none'\n",
+    "        # self.left_sidebar = lbar = Image()\n",
+    "        # self.left_sidebar.layout.align_self = 'center'\n",
+    "        # lbar.layout.display = 'none'\n",
     "        self._fs = Fullscreen(self, [self.view])\n",
     "        self.footer.layout.justify_content = 'center'\n",
     "        display(self._fs)\n",
@@ -142,11 +142,11 @@
     "            m = Chem.AddHs(m)\n",
     "            print(type(m))\n",
     "            Chem.AllChem.EmbedMultipleConfs(m, useExpTorsionAnglePrefs=True, useBasicKnowledge=True)\n",
-    "            self.left_sidebar.value = m._repr_png_()\n",
-    "            self.left_sidebar.layout.display = 'flex'\n",
     "            st = nv.RdkitStructure(m)\n",
     "            self._m = m\n",
     "            self._rdm = st\n",
+    "            # self.left_sidebar.value = m._repr_png_()\n",
+    "            # self.left_sidebar.layout.display = 'flex'\n",
     "\n",
     "        if st:\n",
     "            if self.view.n_components == 0:\n",
@@ -164,38 +164,6 @@
     "# smiles example:\n",
     "# COc1ccc2[C@H](O)[C@@H](COc2c1)N3CCC(O)(CC3)c4ccc(F)cc4\n",
     "s"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 25,
-   "metadata": {
-    "scrolled": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<rdkit.Chem.rdchem.Conformer at 0x111d2e1c0>"
-      ]
-     },
-     "execution_count": 25,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "c0 = s._m.GetConformer()\n",
-    "c0"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "c0.Set3D"
    ]
   }
  ],
