put back static folder

--- a/notebooks/gui.ipynb
+++ b/notebooks/gui.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,13 +11,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9b2186756b564045a57ce1e96152963a",
+       "model_id": "6936cac166234e78a41f9485db828076",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "_ColormakerRegistry()"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "a3e7a019f85948c7938479a2154c1486",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "ThemeManager()"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "32227cd5b8994647b14e6fc8d5b81f26",
        "version_major": 2,
        "version_minor": 0
       },
