--- a/notebooks/gui.ipynb
+++ b/notebooks/gui.ipynb
@@ -3,14 +3,21 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b1c981f38a864172b22febdcf0732a3c",
+       "model_id": "6936cac166234e78a41f9485db828076",
        "version_major": 2,
        "version_minor": 0
       },
@@ -24,7 +31,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "dc8db3286d3846a983238b5a76d487cf",
+       "model_id": "a3e7a019f85948c7938479a2154c1486",
        "version_major": 2,
        "version_minor": 0
       },
@@ -38,7 +45,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b628e811c1b0412798a3dd2d2cc385ce",
+       "model_id": "32227cd5b8994647b14e6fc8d5b81f26",
        "version_major": 2,
        "version_minor": 0
       },
@@ -93,9 +100,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.8.2"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 1
+ "nbformat_minor": 4
 }
