--- a/notebooks/gui.ipynb
+++ b/notebooks/gui.ipynb
@@ -17,13 +17,11 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6936cac166234e78a41f9485db828076",
+       "model_id": "e4d23f680fa941aaa3886dc6dd7923c3",
        "version_major": 2,
        "version_minor": 0
       },
-      "text/plain": [
-       "_ColormakerRegistry()"
-      ]
+      "text/plain": []
      },
      "metadata": {},
      "output_type": "display_data"
@@ -31,7 +29,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a3e7a019f85948c7938479a2154c1486",
+       "model_id": "8183108c729c4c349a59839e79ed2db5",
        "version_major": 2,
        "version_minor": 0
       },
@@ -45,7 +43,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "32227cd5b8994647b14e6fc8d5b81f26",
+       "model_id": "49c6bcb95c2c4850a0ef6884a206c249",
        "version_major": 2,
        "version_minor": 0
       },
@@ -67,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,7 +84,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -100,7 +98,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.2"
+   "version": "3.10.14"
   }
  },
  "nbformat": 4,
