--- a/notebooks/rdkit_smiles_3d.ipynb
+++ b/notebooks/rdkit_smiles_3d.ipynb
@@ -13,24 +13,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5988cc407f3e40e3b26de2821c4adb3c",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "HTML(value='\\n<style>\\n\\n.smilesApp {\\n    background-color: white\\n}\\n</style>\\n')"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "from ipywidgets import HTML\n",
     "\n",
@@ -46,44 +31,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {
-    "scrolled": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "85ecb0f0a4ca42b7a0009ba93278fb7d",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Fullscreen()"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f304a4d903ec44a78448b761a29353b4",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "SmilesView(children=(HBox(children=(VBox(children=(Text(value=''), Output())), VBox(children=(Button(descripti…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "import nglview as nv\n",
     "from IPython.display import display\n",
-    "from nglview.widget import Fullscreen\n",
     "from ipywidgets import Text, Button, AppLayout, VBox, HBox, Output, GridspecLayout, Checkbox, Image\n",
     "import nglview as nv\n",
     "from rdkit import Chem # doctest: +SKIP\n",
@@ -103,34 +56,21 @@
     "        self.view.background = 'black'\n",
     "        self.text = Text()\n",
     "        btn = Button(description='Generate')\n",
-    "        btn_fs = Button(description='Fullscreen')\n",
     "        self.center = self.view\n",
     "        self._out = Output()\n",
     "        self._err = Output()\n",
     "        self._check = Checkbox(description='Replace', value=True)\n",
     "        bgen = VBox([self.text, self._out])\n",
-    "        bfull = VBox([btn, btn_fs])\n",
+    "        bfull = VBox([btn])\n",
     "        footer = self.footer = HBox([bgen, bfull])\n",
     "        # self.left_sidebar = lbar = Image()\n",
     "        # self.left_sidebar.layout.align_self = 'center'\n",
     "        # lbar.layout.display = 'none'\n",
-    "        self._fs = Fullscreen(self, [self.view])\n",
     "        self.footer.layout.justify_content = 'center'\n",
-    "        display(self._fs)\n",
     "        self._m = None\n",
     "        @btn.on_click\n",
     "        def on_click_smiles(_):\n",
     "            self._handle_smiles_changed()\n",
-    "        \n",
-    "        @btn_fs.on_click\n",
-    "        def on_click_fs(_):\n",
-    "            self._fs.fullscreen()\n",
-    "        \n",
-    "        self.on_displayed(self.display_callback)\n",
-    "        \n",
-    "    def display_callback(self, _):\n",
-    "        s.layout.height = '600px'\n",
-    "        s.view.handle_resize()\n",
     "            \n",
     "    def _handle_smiles_changed(self):\n",
     "        self._out.clear_output()\n",
@@ -165,11 +105,18 @@
     "# COc1ccc2[C@H](O)[C@@H](COc2c1)N3CCC(O)(CC3)c4ccc(F)cc4\n",
     "s"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -183,9 +130,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.10.14"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
