--- a/notebooks/gui.ipynb
+++ b/notebooks/gui.ipynb
@@ -17,7 +17,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "05ab050ad3b54261a464bc72b54b7818",
+       "model_id": "42bb11fe3851422d9dce75d8f5275a47",
        "version_major": 2,
        "version_minor": 0
       },
@@ -29,7 +29,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a604078623904a659454e370da9ea7d6",
+       "model_id": "bb3b67e8b81741ea8197aa725561be11",
        "version_major": 2,
        "version_minor": 0
       },
@@ -43,7 +43,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b06ce96f06d848319f613a8b1c390008",
+       "model_id": "ed471be3289c41999a87041a7aa12fab",
        "version_major": 2,
        "version_minor": 0
       },
@@ -61,6 +61,24 @@
     "view = nv.demo()\n",
     "view.gui_style = 'ngl'\n",
     "view"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "nv.write_html('index.html', view)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!open index.html"
    ]
   }
  ],
