--- a/notebooks/gui.ipynb
+++ b/notebooks/gui.ipynb
@@ -17,7 +17,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e4d23f680fa941aaa3886dc6dd7923c3",
+       "model_id": "42bb11fe3851422d9dce75d8f5275a47",
        "version_major": 2,
        "version_minor": 0
       },
@@ -29,7 +29,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8183108c729c4c349a59839e79ed2db5",
+       "model_id": "bb3b67e8b81741ea8197aa725561be11",
        "version_major": 2,
        "version_minor": 0
       },
@@ -43,7 +43,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "49c6bcb95c2c4850a0ef6884a206c249",
+       "model_id": "ed471be3289c41999a87041a7aa12fab",
        "version_major": 2,
        "version_minor": 0
       },
@@ -69,7 +69,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "view._widget_theme.remove()"
+    "nv.write_html('index.html', view)"
    ]
   },
   {
@@ -78,7 +78,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "view._widget_theme.light()"
+    "!open index.html"
    ]
   }
  ],
@@ -98,7 +98,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.14"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
