--- a/examples/notebooks/xray.ipynb
+++ b/examples/notebooks/xray.ipynb
@@ -2,18 +2,26 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "xray_fn: ../../../ngl/data//JMJD2DA-x336_event2.ccp4.gz\n",
+      "pdb_fn: ../../../ngl/data//JMJD2DA-x336_event2.pdb\n"
+     ]
+    },
+    {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f0deeaadf3f24712a5d957adf407b6a6",
-       "version_major": "2",
-       "version_minor": "0"
+       "model_id": "4563540fbcc24d34ba0a2f75d28a7456",
+       "version_major": 2,
+       "version_minor": 0
       },
       "text/plain": [
-       "A Jupyter Widget"
+       "NGLWidget(background='black')"
       ]
      },
      "metadata": {},
@@ -24,9 +32,11 @@
     "import nglview\n",
     "\n",
     "view = nglview.NGLWidget()\n",
-    "data_dir = '../ngl/data/'\n",
+    "data_dir = '../../../ngl/data/'\n",
     "pdb_fn = data_dir + '/JMJD2DA-x336_event2.pdb'\n",
     "xray_fn = data_dir + '/JMJD2DA-x336_event2.ccp4.gz'\n",
+    "print('xray_fn:', xray_fn)\n",
+    "print('pdb_fn:', pdb_fn)\n",
     "view.add_component(xray_fn)\n",
     "view.add_component(pdb_fn)\n",
     "view.background = 'black'\n",
@@ -37,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 7,
    "metadata": {
     "collapsed": true
    },
@@ -48,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 8,
    "metadata": {
     "collapsed": true
    },
@@ -68,7 +78,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -82,7 +92,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
