--- a/notebooks/gui.ipynb
+++ b/notebooks/gui.ipynb
@@ -17,7 +17,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "42bb11fe3851422d9dce75d8f5275a47",
+       "model_id": "3cabdff0f0014d809db47021df9b9282",
        "version_major": 2,
        "version_minor": 0
       },
@@ -29,7 +29,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "bb3b67e8b81741ea8197aa725561be11",
+       "model_id": "7c6c69c9110149d0ac53ee92a7067ade",
        "version_major": 2,
        "version_minor": 0
       },
@@ -43,7 +43,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ed471be3289c41999a87041a7aa12fab",
+       "model_id": "c134427a087141a49f9aa85a1a1b72af",
        "version_major": 2,
        "version_minor": 0
       },
@@ -79,6 +79,17 @@
    "outputs": [],
    "source": [
     "!open index.html"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "view._js(\"\"\"\n",
+    "console.log(IMessage);\n",
+    "\"\"\")"
    ]
   }
  ],
