--- a/notebooks/molstarview.ipynb
+++ b/notebooks/molstarview.ipynb
@@ -9,7 +9,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "06a7e43271564bb39c4159460233f1d1",
+       "model_id": "9bb48c6180b84a70bde1d71662bd59f2",
        "version_major": 2,
        "version_minor": 0
       },
@@ -21,7 +21,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f8928869661645ea927c6083f26806bd",
+       "model_id": "e98092e03f724bce9111cfb3f08b22c3",
        "version_major": 2,
        "version_minor": 0
       },
@@ -36,7 +36,7 @@
    ],
    "source": [
     "import nglview as nv\n",
-    "from molstarview.widget import MolstarView\n",
+    "from nglview.widget_molstar import MolstarView\n",
     "\n",
     "view = MolstarView()\n",
     "view"
@@ -44,17 +44,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "b8df28e8-c84d-4bf8-910c-ce2483538a6e",
    "metadata": {},
    "outputs": [],
    "source": [
-    "st = nv.PdbIdStructure(\"1tsu\")"
+    "st = nv.F"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "8dbe8e02-6ba0-4b17-b81a-4d14d801e30d",
    "metadata": {},
    "outputs": [],
@@ -64,33 +64,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "d7848321-90c2-4d84-80e0-8b02635643f4",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'_dom_classes': (),\n",
-       " '_model_module': 'molstarview-widget',\n",
-       " '_model_module_version': '^0.1.0',\n",
-       " '_model_name': 'MolstarModel',\n",
-       " '_view_count': None,\n",
-       " '_view_module': 'molstarview-widget',\n",
-       " '_view_module_version': '^0.1.0',\n",
-       " '_view_name': 'MolstarView',\n",
-       " 'frame': 0,\n",
-       " 'layout': 'IPY_MODEL_b3df71bc572c4bd29c5a9268c54e653a',\n",
-       " 'molstate': {},\n",
-       " 'tabbable': None,\n",
-       " 'tooltip': None}"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "view.get_state()"
    ]
