--- a/notebooks/molstarview.ipynb
+++ b/notebooks/molstarview.ipynb
@@ -9,7 +9,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9bb48c6180b84a70bde1d71662bd59f2",
+       "model_id": "18c2f150cff1455eb7deaf789ab8122e",
        "version_major": 2,
        "version_minor": 0
       },
@@ -21,7 +21,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e98092e03f724bce9111cfb3f08b22c3",
+       "model_id": "1bd271758c474551a6f66f5e5024671e",
        "version_major": 2,
        "version_minor": 0
       },
@@ -44,17 +44,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "b8df28e8-c84d-4bf8-910c-ce2483538a6e",
    "metadata": {},
    "outputs": [],
    "source": [
-    "st = nv.F"
+    "st = nv.FileStructure(nv.datafiles.PDB)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "8dbe8e02-6ba0-4b17-b81a-4d14d801e30d",
    "metadata": {},
    "outputs": [],
