--- a/notebooks/molstarview.ipynb
+++ b/notebooks/molstarview.ipynb
@@ -2,38 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "3bef2996-dfbe-4ed7-9816-da54d4a57eb0",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "18c2f150cff1455eb7deaf789ab8122e",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": []
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1bd271758c474551a6f66f5e5024671e",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "MolstarView()"
-      ]
-     },
-     "execution_count": 1,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "import nglview as nv\n",
     "from nglview.widget_molstar import MolstarView\n",
@@ -44,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "b8df28e8-c84d-4bf8-910c-ce2483538a6e",
    "metadata": {},
    "outputs": [],
@@ -54,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "8dbe8e02-6ba0-4b17-b81a-4d14d801e30d",
    "metadata": {},
    "outputs": [],
@@ -65,11 +37,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d7848321-90c2-4d84-80e0-8b02635643f4",
+   "id": "74bbfaa4-52ee-4d18-be9a-2b002d959940",
    "metadata": {},
    "outputs": [],
    "source": [
-    "view.get_state()"
+    "view._molstar_version"
    ]
   }
  ],
