--- a/notebooks/molviewspec.ipynb
+++ b/notebooks/molviewspec.ipynb
@@ -2,37 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "id": "fedefdce-ce21-4c3c-90bd-27909fe17413",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "be1e69a57b6541a49a2f0893a78524f4",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": []
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "from nglview import widget_molstar"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "id": "99813515-ec54-4cbd-b26a-09fd6588acae",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0e73dfe9d0994bff9778f6de85972f63",
+       "model_id": "e14101fc8db048418b6f4d185e037e52",
        "version_major": 2,
        "version_minor": 0
       },
@@ -45,28 +22,7 @@
     }
    ],
    "source": [
-    "view = widget_molstar.MolstarView()\n",
-    "view"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "id": "3546a5a0-0fc9-4201-afef-bf4a9a9b117d",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Representation()"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
+    "from nglview import widget_molstar\n",
     "import molviewspec as mvs\n",
     "builder = mvs.create_builder()\n",
     "# at each step, auto-complete will suggest possible actions depending on the current state of the builder\n",
@@ -76,22 +32,16 @@
     "    .assembly_structure(assembly_id='1')\n",
     "    .component()\n",
     "    .representation()\n",
-    ")"
+    ")\n",
+    "state = builder.get_state()\n",
+    "\n",
+    "view = widget_molstar.MolstarView()\n",
+    "view"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "ae95df65-a16e-47c9-8be6-8d6987570486",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "state = builder.get_state()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 8,
    "id": "721ddcc5-b651-460a-8405-af86b8cae20f",
    "metadata": {},
    "outputs": [],
@@ -102,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "id": "212d9e0f-ed12-4688-a364-d2b820edd605",
    "metadata": {},
    "outputs": [],
@@ -121,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 6,
    "id": "9f1616a1-1b9c-4d76-a153-8a3dc732a321",
    "metadata": {},
    "outputs": [],
