--- a/notebooks/molviewspec.ipynb
+++ b/notebooks/molviewspec.ipynb
@@ -2,14 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "id": "fedefdce-ce21-4c3c-90bd-27909fe17413",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e14101fc8db048418b6f4d185e037e52",
+       "model_id": "7eb38b3aa4f14a40adb50bae1d0937b2",
        "version_major": 2,
        "version_minor": 0
       },
@@ -36,50 +36,17 @@
     "state = builder.get_state()\n",
     "\n",
     "view = widget_molstar.MolstarView()\n",
+    "view.load_spec(state)\n",
     "view"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "id": "721ddcc5-b651-460a-8405-af86b8cae20f",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "view._remote_call('loadMolstarSpec',\n",
-    "                  args=[state, {}])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "212d9e0f-ed12-4688-a364-d2b820edd605",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "view._js(\"\"\"\n",
-    "this.loadMolstarSpec = async function(spec, options) {\n",
-    "    console.log('Hello there');\n",
-    "    try {\n",
-    "        await loadMVS(this.plugin, spec, options);\n",
-    "    } catch (error) {\n",
-    "        console.error('Error loading Molstar spec:', error);\n",
-    "    }\n",
-    "}\n",
-    "\"\"\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "id": "9f1616a1-1b9c-4d76-a153-8a3dc732a321",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "view._js(\"\"\"\n",
-    "console.log(this.loadMolstarSpec);\n",
-    "\"\"\")"
-   ]
+   "source": []
   }
  ],
  "metadata": {
