--- a/notebooks/molviewspec.ipynb
+++ b/notebooks/molviewspec.ipynb
@@ -2,14 +2,26 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "id": "fedefdce-ce21-4c3c-90bd-27909fe17413",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7eb38b3aa4f14a40adb50bae1d0937b2",
+       "model_id": "e74f2c3635cc4b89987bd72f1c25880b",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": []
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "f2dd1db95dca410fa8c99c6839f22ae0",
        "version_major": 2,
        "version_minor": 0
       },
@@ -39,14 +51,6 @@
     "view.load_spec(state)\n",
     "view"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "id": "721ddcc5-b651-460a-8405-af86b8cae20f",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
