--- a/notebooks/molviewspec.ipynb
+++ b/notebooks/molviewspec.ipynb
@@ -2,26 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "fedefdce-ce21-4c3c-90bd-27909fe17413",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e74f2c3635cc4b89987bd72f1c25880b",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": []
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f2dd1db95dca410fa8c99c6839f22ae0",
+       "model_id": "4c5e21b11a2a443184148aa64268245b",
        "version_major": 2,
        "version_minor": 0
       },
@@ -44,6 +32,7 @@
     "    .assembly_structure(assembly_id='1')\n",
     "    .component()\n",
     "    .representation()\n",
+    "    .color(color=\"blue\")\n",
     ")\n",
     "state = builder.get_state()\n",
     "\n",
