chore: use moviepy<2.0.0 (due to conda limitation)

--- a/notebooks/movie_making.ipynb
+++ b/notebooks/movie_making.ipynb
@@ -96,7 +96,7 @@
     }
    ],
    "source": [
-    "# require: `pip install moviepy`\n",
+    "# require: `pip install moviepy<2.0.0`\n",
     "\n",
     "movie = MovieMaker(view, in_memory=True, output='abc.gif')\n",
     "movie.make()"
